--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+#build folder
+build/*
+
+# hpp files
+project-config.hpp
+
 # Prerequisites
 *.d
 
@@ -10,6 +16,7 @@
 # Precompiled Headers
 *.gch
 *.pch
+*.pdb
 
 # Compiled Dynamic libraries
 *.so
