--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,8 @@
-#build folder
-build/*
+# biold folder
+/build/
 
-# hpp files
+# bin folder
+/bin/
+
+# generated files
 project-config.hpp
-
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-*.pdb
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
