Переход на Windows 10 компилятор vs2022.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,5 +89,6 @@
         "xutility": "cpp",
         "*.inc": "cpp",
         "future": "cpp"
-    }
+    },
+    "cmake.preferredGenerators": [ "Ninja" ]
 }
